# insigne

./: .gitignore  .gitmodules  CMakeLists.txt  demo.cpp  generate_code.bat  project_configs.cmake  readme.md  readme.txt
include/insigne/: buffers.h  commands.h  commons.h  configs.h  context.h  counters.h  driver.h  internal_commons.h  internal_states.h  memory.h  render.h  render.hpp  renderer.h  renderer_gl.h  renderer_gl.hpp  stream.h  system.h  system.hpp  ut_buffers.h  ut_memory.h  ut_render.h  ut_render.hpp  ut_shading.h  ut_shading.hpp  ut_states.h  ut_states.hpp  ut_textures.h
include/insigne/detail/: render.h  render.hpp  render_states.h  renderer_states_gl.h  rt_buffers.h  rt_buffers.hpp  rt_render.h  rt_render.hpp  rt_shading.h  rt_shading.hpp  rt_textures.h  types.h
include/insigne/generated_code/: helpers.h  oglapis.h  proxy.h
include/insigne/gl/: identifiers.h
src/: configs.cpp  context.cpp  counters.cpp  driver.cpp  driver_egl.cpp  driver_windows.cpp  internal_states.cpp  memory.cpp  render.cpp  renderer_egl.cpp  renderer_gl.cpp  stream.cpp  system.cpp  ut_buffers.cpp  ut_render.cpp  ut_shading.cpp  ut_states.cpp  ut_textures.cpp
src/detail/: render_states.cpp  renderer_states_gl.cpp  rt_buffers.cpp  rt_render.cpp  rt_shading.cpp  rt_textures.cpp
src/generated_code/: oglapis.cpp  proxy.cpp
templates/: helpers.body  helpers.header  oglapis_cpp.body  oglapis_cpp.header  oglapis_h.body  oglapis_h.header  ogldefs.csv  proxy_cpp.header  proxy_cpp_v0.body  proxy_cpp_v1.body  proxy_h.body  proxy_h.header
